assets/css/main.css
/* ... */
#slogan a:hover {
  color: #c30d2c;
  background-color: white;
}

/* Section 5 */

#specialists img {
  border-radius: 50%;
  border: 20px solid;
}

#specialists {
  background-position: top right 150px;
  background-repeat-x: no-repeat;
  background-repeat: repeat-y;
}

#specialists > h2 {
}

#specialists .content {
  text-align: center;
}

#specialists p {
  text-align: left;
}

/* Appointment */

#appointment .container {
  padding: 20px;
  background: #0000005c;
  border-radius: 20px;
}

#appointment h2 {
  color: #cacccb;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 4rem;
  margin-bottom: 30px;
}

#appointment .label,
.field-label {
  color: #cacac8;
  font-size: 1rem;
  font-weight: 700;
  text-transform: uppercase;
  font-size: 1.2rem;
}

#appointment .field-label {
  text-align: left;
  margin-bottom: 0.5em;
}

#appointment input {
  background: none;
  border: none;
  box-shadow: none;
  border-bottom: 2px solid white;
  color: white;
}

#appointment input::placeholder {
  color: rgb(180, 180, 180);
}

#appointment select {
  background: none;
  color: white;
  font-weight: 500;
  border: none;
  border-bottom: 2px solid white;
  box-shadow: none;
}

#appointment .select::after {
  border-color: white;
  -webkit-transform: rotate(-140deg);
  transform: rotate(-140deg);
}

#appointment button {
  font-size: 2rem;
  margin-top: 40px;
  border-radius: 30px;
  letter-spacing: 10px;
  background: #0000005c;
  color: #cacac8;
  border: none;
  padding: 6px 18px;
  cursor: pointer;
  transition: all 0.3s ease-in;
}

#appointment option {
  background: black;
}

#appointment button:hover {
  color: red;
  background: #00000096;
}

#appointment .button.is-static {
  background: transparent;
  color: white;
  border-width: 2px;
}
#appointment {
  color: white;
}

/* Contacts 9 */

#contacts h2 {
  margin-bottom: 20px;
  font-size: 5rem;
  text-transform: uppercase;
}

#contacts h3 {
  color: #755b5b;
  font-weight: 400;
  padding: 5px 10px;
  background: #ffffffab;
  border-radius: 10px;
  margin-bottom: 10px;
  line-height: 1.125;
  font-size: 3rem;
}

#contacts .icon {
  font-size: 3rem;
  color: red;
}

#contacts a {
  display: block;
  margin-top: 20px;
  border-radius: 30px;
  background: #0000005c;
  color: white;
  border: none;
  padding: 6px 18px;
  cursor: pointer;
  width: 75%;
  font-size: 1.2rem;
  letter-spacing: 5px;
  transition: all 0.3s ease-in;
}

#contacts a:hover {
  color: #c30d2c;
  background-color: #00000024;
}

#contacts p {
  margin-bottom: 5px;
  font-family: "Philosopher", sans-serif;
}

#contacts .icons .icon {
  margin-left: 15px;
}

/* #contacts {
  background-image: url(image/Fifth-screen.jpg);
} */

#reviews h2,
#specialists h2 {
  font-size: 3rem;
  color: #434d56;
  text-align: center;
}

#specialists h2 {
  margin-bottom: 20px;
}

#specialists h3 {
  border-radius: 100px;
}

/* Services style and mechanics */

#services .flex-reverse {
  flex-direction: row-reverse;
}
#services .columns {
  position: relative;
}
#services input {
  display: none;
}
#services .column {
  overflow: auto;
  padding: 0;
  z-index: 1;
}
/* Style container */
#services .controls {
  position: absolute;
  left: 35%;
  bottom: 5%;
  z-index: 2;
  transition: left 0.3s ease-out;
}
#services .flex-reverse .controls {
  left: 50%;
}
/* Style content */
#services .serv-content {
  display: none;
  position: absolute;
  top: 0;    
  margin-left: 20px;
  margin-top: 10px;
}
/* Style buttons */
#services .controls label {
  display: block;
  border-radius: 30px;
  background-color: rgba(0, 0, 0, 0.36);
  color: white;
  border: none;
  padding: 6px 18px;
  cursor: pointer;
  font-size: 1.5rem;
  margin-bottom: 20px;
  text-align: center;
}
/* Style container when any is active */
#services input.log-ctrl:checked ~ .controls {
  left: 48%;
}
#services .flex-reverse input.log-ctrl:checked ~ .controls {
  left: 33%;
}
/* Style content container when any is active */
#services input.log-ctrl:checked ~ .column:nth-of-type(2) {
  background-color: #ffffffcf;
}
/* Style buttons when any is active */
#services input.log-ctrl:checked ~ .controls label {
  background-color: rgb(92, 91, 91)
}
/* Style active button */
#services [id^="desc"]:checked ~ .controls [for^="desc"],
#services [id^="price"]:checked ~ .controls [for^="price"] {
  background-color: red;
}
/* Functionality */
#desc1:checked ~ .column #desc-content1,#price1:checked ~ .column #price-content1,#desc2:checked ~ .column #desc-content2,#price2:checked ~ .column #price-content2,#desc3:checked ~ .column #desc-content3,#price3:checked ~ .column #price-content3,#desc4:checked ~ .column #desc-content4,#price4:checked ~ .column #price-content4,#desc5:checked ~ .column #desc-content5,#price5:checked ~ .column #price-content5,#desc6:checked ~ .column #desc-content6,#price6:checked ~ .column #price-content6,#desc7:checked ~ .column #desc-content7,#price7:checked ~ .column #price-content7,#desc8:checked ~ .column #desc-content8,#price8:checked ~ .column #price-content8,#desc9:checked ~ .column #desc-content9,#price9:checked ~ .column #price-content9,#desc10:checked ~ .column #desc-content10,#price10:checked ~ .column #price-content10,#desc11:checked ~ .column #desc-content11,#price11:checked ~ .column #price-content11,#desc12:checked ~ .column #desc-content12,#price12:checked ~ .column #price-content12,#desc13:checked ~ .column #desc-content13,#price13:checked ~ .column #price-content13,#desc14:checked ~ .column #desc-content14,#price14:checked ~ .column #price-content14,#desc15:checked ~ .column #desc-content15,#price15:checked ~ .column #price-content15,#desc16:checked ~ .column #desc-content16,#price16:checked ~ .column #price-content16 {
  display: block;
}

span.icon {
  width: 38px;
}

